--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						    <span> <a href="https://github.com/mohammedgaza/Html-GSG">1.GitHub </a></span><br>
                             <span> <a href="https://www.freecodecamp.org/mohammedwishah1304">2.freeCodeCamp Profile</a></span><br>
                             <span> <a href="https://www.codewars.com/users/mohammedgaza">3.CodeWars Profile</a></span><br>
-                            <span> <a href="https://mohammedgaza.github.io/Js-GSG/">4.JavaScript project</a></span></p>
+                            <span> <a href="https://github.com/mohammedgaza/javaScriptProject">4.JavaScript project</a></span></p>
                                 </div>
                                 
                         </div>
